[package]
name = "cache_2q"
version = "0.10.0"
authors = ["Zachary Dremann <dremann@gmail.com>"]
description = "A 2Q Cache which maps keys to values"
edition = "2018"

repository = "https://github.com/Dr-Emann/rust-cache-2q"
documentation = "https://docs.rs/cache_2q/"

readme = "README.md"

keywords = ["cache", "2q", "lru"]

categories = ["algorithms", "caching", "data-structures"]

license = "MIT/Apache-2.0"

[dependencies]
linked-hash-map = "0.5"